# HousePrice_Project_EjikeChiamaka_22CG031853

./: HousePrice_PROJECT_SUMMARY.txt
HousePrice_Project_EjikeChiamaka_22CG031853/: .gitignore  DEPLOYMENT_GUIDE.md  FINAL_VERIFICATION.md  HousePrice_hosted_webGUI_link.txt  IMPLEMENTATION_NOTES.md  QUICK_REFERENCE.txt  README.md  START_HERE.md  app.py  pyproject.toml  requirements.txt  train_model.py
HousePrice_Project_EjikeChiamaka_22CG031853/model/: house_price_model.pkl  model_building.ipynb
HousePrice_Project_EjikeChiamaka_22CG031853/static/: style.css
HousePrice_Project_EjikeChiamaka_22CG031853/templates/: index.html
