[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HousePrice"
version = "1.0.0"
description = "House Price Prediction System"
requires-python = ">=3.11,<3.13"
dependencies = [
    "Flask==3.0.0",
    "pandas==2.1.4",
    "numpy==1.26.3",
    "scikit-learn==1.4.0",
    "joblib==1.4.2",
    "gunicorn==22.0.0",
]
